# Project-Drift

./: .env.example  .gitattributes  .gitignore  ANTICHEAT_FIX.md  BUILD_DELETE_FEATURE.md  BUILD_PATCHER_IMPLEMENTATION.md  BUILD_PATCHER_QUICK_REF.md  BUILD_PATCHER_SUCCESS.md  BYPASS_SETUP.md  COMPLETE_FEATURE_SUMMARY.md  GETTING_STARTED.md  LAUNCHER_SUCCESS.md  LICENSE  MCP_BACKEND_GUIDE.md  MCP_IMPLEMENTATION_SUMMARY.md  P2P_MATCHMAKING_SETUP.md  PLATFORM_SUMMARY.md  QUICK_START.md  QUICK_START_MCP.md  README.md  SETTINGS_FIX.md  SIMPLE_P2P_GUIDE.md  STATUS_MANAGEMENT.md  STOCK_VS_ERA_BUILDS.md  SYSTEM_ARCHITECTURE.md  TESTING_P2P.md  VISUAL_P2P_GUIDE.md  WINDOWS_SETUP.md  add-hosts-redirects.ps1  build-bypass.bat  check-bypass-requirements.bat  check-env.ps1  check-environment.ps1  database-schema.sql  diagnose-running-game.ps1  diagnose-working-fortnite.ps1  docker-compose.dev.yml  docker-compose.yml  install-cpp-compiler.bat  launch-4.5-simple.ps1  (+18 more)
.github/: copilot-instructions.md
Project Drift Website/: INSTALLATION_GUIDE.md  README.md  index.html  package.json  project_drift_website (1).html  vercel.json
admin/: index.html  package.json  tailwind.config.js
bypass/: EpicGamesLauncher.cpp  hooks.h
docker/: matchmaking.Dockerfile  server.Dockerfile
docs/: BUILD_PATCHER.md  architecture.mmd  build_catalog.json  build_catalog.sample.json  ui-guidelines.md
injector/: injector.vcxproj  main.cpp  main_reboot.cpp
server/: Cargo.toml
server/src/: anticheat.rs  config.rs  main.rs  network.rs  physics.rs  player.rs  snapshot.rs  state.rs  tick.rs
(+124 files in other folders)
