[package]
name = "drift-server"
version = "0.1.0"
edition = "2021"
authors = ["Project Drift Team"]
description = "Authoritative game server for Project Drift"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# QUIC/UDP networking
quinn = "0.10"
rustls = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math and physics
glam = "0.25"
rapier3d = "0.17"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
rand = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# JWT validation
jsonwebtoken = "9.2"

# Rate limiting
governor = "0.6"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "drift-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
